--- a/game/client/public/locales/pl.json
+++ b/game/client/public/locales/pl.json
@@ -1,4 +1,8 @@
 {
+  "generic": {
+    "hide": "Pokaż",
+    "show": "Ukryj"
+  },
   "lang": {
     "pl": "Polski",
     "en": {
@@ -7,11 +11,27 @@
   },
   "login": {
     "headers": {
-      "signIn": "Zaloguj się"
+      "sign-in": "Zaloguj się",
+      "remind-password": "Przypomnij hasło",
+      "register": "Zarejestruj się"
+    },
+    "fields": {
+      "enter-login": "Wprowadź swój Login",
+      "enter-login-email": "Wprowadź swój Login lub hasło",
+      "enter-password": "Wprowadź swoje Hasło",
+      "login": "Zaloguj się",
+      "remind-me": "Przypomnij mi"
     },
     "min": "Login musi mieć co najmniej {min} znaków!",
     "max": "Login może mieć maksymalnie {max} znaków!",
     "required": "Login jest wymagany!"
+  },
+  "lobby-nav": {
+    "items": {
+      "play": "Graj",
+      "documentation": "Dokumentacja",
+      "knowledge-base": "Baza wiedzy"
+    }
   },
   "password": {
     "min": "Hasło musi mieć co najmniej {min} znaków!",
