--- a/game/client/public/locales/pl.json
+++ b/game/client/public/locales/pl.json
@@ -1,7 +1,15 @@
 {
+  "characters": {
+    "headers": {
+      "choose": "Wybierz bohatera"
+    }
+  },
   "generic": {
     "hide": "Pokaż",
-    "show": "Ukryj"
+    "show": "Ukryj",
+    "empty": "Pusto",
+    "level": "Poziom",
+    "loader": "Loader"
   },
   "lang": {
     "pl": "Polski",
@@ -13,7 +21,8 @@
     "headers": {
       "sign-in": "Zaloguj się",
       "remind-password": "Przypomnij hasło",
-      "register": "Zarejestruj się"
+      "register": "Zarejestruj się",
+      "logout": "Wyloguj się"
     },
     "fields": {
       "enter-login": "Wprowadź swój Login",
