refactor: split login form into reusable LobbyForm

--- a/game/client/public/locales/en.json
+++ b/game/client/public/locales/en.json
@@ -9,7 +9,12 @@
     "show": "Show",
     "empty": "Empty",
     "level": "Level",
-    "loader": "Loader"
+    "loader": "Loader",
+    "form": {
+      "input": {
+        "invalid": "Input is invalid"
+      }
+    }
   },
   "lang": {
     "pl": "Polish",
