--- a/game/client/public/locales/pl.json
+++ b/game/client/public/locales/pl.json
@@ -1,4 +1,12 @@
 {
+  "auth": {
+    "headers": {
+      "sign-in": "Zaloguj się",
+      "remind-password": "Przypomnij hasło",
+      "register": "Zarejestruj się",
+      "logout": "Wyloguj się"
+    }
+  },
   "characters": {
     "headers": {
       "choose": "Wybierz bohatera"
@@ -23,12 +31,6 @@
     }
   },
   "login": {
-    "headers": {
-      "sign-in": "Zaloguj się",
-      "remind-password": "Przypomnij hasło",
-      "register": "Zarejestruj się",
-      "logout": "Wyloguj się"
-    },
     "fields": {
       "enter-login": "Wprowadź swój Login",
       "enter-login-email": "Wprowadź swój Login lub hasło",
